--- a/index.html
+++ b/index.html
@@ -49,29 +49,51 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">
-              Academic Project Page
+              Towards Tight Convex Relaxations for Contact-Rich Manipulation
             </h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a href="https://bernhardpg.github.io/" target="_blank">Bernhard Paus Graesdal</a><sup>1</sup>,
+              </span>
               <span class="author-block">
-                <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                Shao Yuan Chew Chia<sup>2</sup>,
+              </span>
               <span class="author-block">
-                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+                <a href="https://tobiamarcucci.github.io/" target="_blank">Tobia Marcucci</a><sup>1</sup>,
+              </span>
+              <span class="author-block"> Savva Morozov, </span>
+              <span class="author-block">
+                <a href="https://alexandreamice.github.io/" target="_blank">Alexandre Amice</a><sup>1</sup>,
+              </span>
+              <span class="author-block">
+                <a href="https://www.mit.edu/~parrilo/" target="_blank">Pablo A. Parrilo</a><sup>1</sup>,
+              </span>
+              <span class="author-block">
+                <a href="https://groups.csail.mit.edu/locomotion/russt.html" target="_blank">Russ
+                  Tedrake</a><sup>1</sup>
               </span>
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block">Institution Name<br />Conferance name and year</span>
-              <span class="eql-cntrb"><small><br /><sup>*</sup>Indicates Equal Contribution</small></span>
+              <span class="eql-cntrb">
+                <span class="author-block">RSS 2024</span>
+                <small><br /><sup>1</sup> Department of Electrical Engineering and
+                  Computer Science, Massachusetts Institute of Technology,
+                  Cambridge, MA, USA
+                </small>
+                <small><br /><sup>2</sup>
+                  Department of Computer Science, Harvard University,
+                  Cambridge MA, USA.
+                </small>
+              </span>
             </div>
 
             <div class="column has-text-centered">
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                  <a href="https://arxiv.org/pdf/2402.10312" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -80,20 +102,9 @@
                   </a>
                 </span>
 
-                <!-- Supplementary PDF link -->
-                <span class="link-block">
-                  <a href="static/pdfs/supplementary_material.pdf" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                    </span>
-                    <span>Supplementary</span>
-                  </a>
-                </span>
-
                 <!-- Github link -->
                 <span class="link-block">
-                  <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                  <a href="https://github.com/YOUR_REPO_HERE" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -104,7 +115,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                  <a href="https://arxiv.org/abs/2402.10312" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -119,7 +130,6 @@
       </div>
     </div>
   </section>
-
   <!-- Teaser video-->
   <section class="hero teaser">
     <div class="container is-max-desktop">
