--- a/index.html
+++ b/index.html
@@ -157,15 +157,25 @@
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-              ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna
-              feugiat nibh elementum, et tempor dolor mattis. Donec accumsan
-              enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex
-              eget mauris cursus euismod nec et nibh. Maecenas ac gravida
-              ante, nec cursus dui. Vivamus purus nibh, placerat ac purus
-              eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus
-              gravida commodo. Pellentesque auctor leo vitae sagittis
-              suscipit.
+              We present a method for global motion planning of robotic
+              systems that interact with the environment through contacts. Our
+              method directly handles the hybrid nature of such tasks using
+              tools from convex optimization. We formulate the motion-planning
+              problem as a shortest-path problem in a graph of convex sets,
+              where a path in the graph corresponds to a contact sequence and
+              a convex set models the quasi-static dynamics within a fixed
+              contact mode. For each contact mode, we use semidefinite
+              programming to relax the nonconvex dynamics that results from
+              the simultaneous optimization of the object's pose, contact
+              locations, and contact forces. The result is a tight convex
+              relaxation of the overall planning problem, that can be
+              efficiently solved and quickly rounded to find a feasible
+              contact-rich trajectory. As a first application of this
+              technique, we focus on the task of planar pushing. Exhaustive
+              experiments show that our convex-optimization method generates
+              plans that are consistently within a small percentage of the
+              global optimum. We demonstrate the quality of these plans on a
+              real robotic system.
             </p>
           </div>
         </div>
