--- a/index.html
+++ b/index.html
@@ -130,24 +130,39 @@
       </div>
     </div>
   </section>
-  <!-- Teaser video-->
+
+  <!-- Three teaser videos -->
   <section class="hero teaser">
     <div class="container is-max-desktop">
       <div class="hero-body">
-        <video poster="" id="tree" autoplay controls muted loop height="100%">
-          <!-- Your video here -->
-          <source src="static/videos/banner_video.mp4" type="video/mp4" />
-        </video>
+        <div class="columns">
+          <div class="column">
+            <video poster="" autoplay muted loop height="100%">
+              <source src="static/videos/plans_shape_3.mp4" type="video/mp4" />
+            </video>
+          </div>
+          <div class="column">
+            <video poster="" autoplay muted loop height="100%">
+              <source src="static/videos/plans_shape_4.mp4" type="video/mp4" />
+            </video>
+          </div>
+          <div class="column">
+            <video poster="" autoplay muted loop height="100%">
+              <source src="static/videos/plans_shape_Tee.mp4" type="video/mp4" />
+            </video>
+          </div>
+        </div>
         <h2 class="subtitle has-text-centered">
-          Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus
-          tellus, maximus vel lectus at, placerat pretium mi. Maecenas
-          dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut
-          maximus.
+          <b>TL;DR:</b> We introduce a novel motion planning method for global
+          planning of contact-rich trajectories through the use of tight
+          convex relaxations, and demonstrate its effectiveness on a
+          non-prehensile manipulation task in the plane where current
+          state-of-the-art approaches usually fail.
         </h2>
       </div>
     </div>
   </section>
-  <!-- End teaser video -->
+  <!-- End teaser videos -->
 
   <!-- Paper abstract -->
   <section class="section hero is-light">
