--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                 <!-- Github link -->
                 <span class="link-block">
-                  <a href="https://github.com/YOUR_REPO_HERE" target="_blank"
+                  <a href="https://github.com/bernhardpg/planning-through-contact" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
