Add video and hardware carousel

--- a/index.html
+++ b/index.html
@@ -130,34 +130,32 @@
       </div>
     </div>
   </section>
-
   <!-- Three teaser videos -->
   <section class="hero teaser">
     <div class="container is-max-desktop">
       <div class="hero-body">
         <div class="columns">
           <div class="column">
-            <video poster="" autoplay muted loop height="100%">
+            <video poster="" autoplay muted loop style="width: 100%; max-width: 100%">
               <source src="static/videos/plans_shape_3.mp4" type="video/mp4" />
             </video>
           </div>
           <div class="column">
-            <video poster="" autoplay muted loop height="100%">
+            <video poster="" autoplay muted loop style="width: 100%; max-width: 100%">
               <source src="static/videos/plans_shape_4.mp4" type="video/mp4" />
             </video>
           </div>
           <div class="column">
-            <video poster="" autoplay muted loop height="100%">
+            <video poster="" autoplay muted loop style="width: 100%; max-width: 100%">
               <source src="static/videos/plans_shape_Tee.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
         <h2 class="subtitle has-text-centered">
-          <b>TL;DR:</b> We introduce a novel motion planning method for global
-          planning of contact-rich trajectories through the use of tight
-          convex relaxations, and demonstrate its effectiveness on a
-          non-prehensile manipulation task in the plane where current
-          state-of-the-art approaches usually fail.
+          Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus
+          tellus, maximus vel lectus at, placerat pretium mi. Maecenas
+          dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut
+          maximus.
         </h2>
       </div>
     </div>
@@ -198,45 +196,45 @@
     </div>
   </section>
   <!-- End paper abstract -->
-
   <!-- Image carousel -->
   <section class="hero is-small">
     <div class="hero-body">
       <div class="container">
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item">
-            <!-- Your image here -->
-            <img src="static/images/carousel1.jpg" alt="MY ALT TEXT" />
-            <h2 class="subtitle has-text-centered">
-              First image description.
-            </h2>
+            <img src="static/images/hardware_1.jpg" alt="MY ALT TEXT" class="carousel-image" />
           </div>
           <div class="item">
-            <!-- Your image here -->
-            <img src="static/images/carousel2.jpg" alt="MY ALT TEXT" />
-            <h2 class="subtitle has-text-centered">
-              Second image description.
-            </h2>
-          </div>
-          <div class="item">
-            <!-- Your image here -->
-            <img src="static/images/carousel3.jpg" alt="MY ALT TEXT" />
-            <h2 class="subtitle has-text-centered">
-              Third image description.
-            </h2>
-          </div>
-          <div class="item">
-            <!-- Your image here -->
-            <img src="static/images/carousel4.jpg" alt="MY ALT TEXT" />
-            <h2 class="subtitle has-text-centered">
-              Fourth image description.
-            </h2>
+            <img src="static/images/hardware_2.jpg" alt="MY ALT TEXT" class="carousel-image" />
           </div>
         </div>
+        <h2 class="subtitle has-text-centered">
+          Our method is able to generate close-to globally optimal plans for
+          pushing tasks with collision-free motion planning between contact
+          modes. Here, two different pushing trajectories for a T-shaped
+          slider are shown, stabilized with a feedback controller on a real
+          robotic system.
+        </h2>
+      </div>
+    </div>
+    <div class="hero-body">
+      <div class="container is-max-desktop">
+        <div class="columns is-centered">
+          <div class="column is-flex is-justify-content-center">
+            <video poster="" autoplay muted loop controls style="width: 100%; max-width: 750px">
+              <source src="static/videos/hardware_demos.mp4" type="video/mp4" />
+            </video>
+          </div>
+        </div>
+        <h2 class="subtitle has-text-centered">
+          We demonstrate the feasibility of the obtained motion plans on a
+          Kuka LBR iiwa 7 R800 7-DOF robotic arm, with a T-shaped slider
+          object.
+        </h2>
       </div>
     </div>
   </section>
-  <!-- End image carousel -->
+  <!-- End centered video section -->
 
   <!-- Youtube video -->
   <section class="hero is-small is-light">
@@ -258,38 +256,8 @@
   </section>
   <!-- End youtube video -->
 
-  <!-- Video carousel -->
-  <section class="hero is-small">
-    <div class="hero-body">
-      <div class="container">
-        <h2 class="title is-3">Another Carousel</h2>
-        <div id="results-carousel" class="carousel results-carousel">
-          <div class="item item-video1">
-            <video poster="" id="video1" autoplay controls muted loop height="100%">
-              <!-- Your video file here -->
-              <source src="static/videos/carousel1.mp4" type="video/mp4" />
-            </video>
-          </div>
-          <div class="item item-video2">
-            <video poster="" id="video2" autoplay controls muted loop height="100%">
-              <!-- Your video file here -->
-              <source src="static/videos/carousel2.mp4" type="video/mp4" />
-            </video>
-          </div>
-          <div class="item item-video3">
-            <video poster="" id="video3" autoplay controls muted loop height="100%">
-              \
-              <!-- Your video file here -->
-              <source src="static/videos/carousel3.mp4" type="video/mp4" />
-            </video>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End video carousel -->
-
   <!-- Paper poster -->
+  <!--
   <section class="hero is-small is-light">
     <div class="hero-body">
       <div class="container">
@@ -300,6 +268,7 @@
       </div>
     </div>
   </section>
+  -->
   <!--End paper poster -->
 
   <!--BibTex citation -->
