Fill out meta tags

--- a/index.html
+++ b/index.html
@@ -3,27 +3,33 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
+  <!-- Meta tags for social media banners, these should be filled in appropriately as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="DESCRIPTION META TAG" />
-  <meta property="og:title" content="SOCIAL MEDIA TITLE TAG" />
-  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG" />
-  <meta property="og:url" content="URL OF THE WEBSITE" />
-  <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
+  <meta name="description"
+    content="Towards Tight Convex Relaxations for Contact-Rich Manipulation - A method for global motion planning of robotic systems interacting through contacts using convex optimization." />
+  <meta property="og:title" content="Towards Tight Convex Relaxations for Contact-Rich Manipulation" />
+  <meta property="og:description"
+    content="Discover a method for global motion planning of robotic systems interacting through contacts using tools from convex optimization." />
+  <meta property="og:url" content="https://github.com/bernhardpg/rss24-towards-tight-convex-relaxations" />
+  <!-- Path to banner image, should be in the path listed below. Optimal dimensions are 1200x630 -->
+  <meta property="og:image" content="static/images/your_banner_image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
-  <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG" />
-  <meta name="twitter:description" content="TWITTER BANNER DESCRIPTION META TAG" />
-  <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
+  <meta name="twitter:title" content="Towards Tight Convex Relaxations for Contact-Rich Manipulation" />
+  <meta name="twitter:description"
+    content="Discover a method for global motion planning of robotic systems interacting through contacts using tools from convex optimization." />
+  <!-- Path to banner image, should be in the path listed below. Optimal dimensions are 1200x600 -->
   <meta name="twitter:image" content="static/images/your_twitter_banner_image.png" />
   <meta name="twitter:card" content="summary_large_image" />
-  <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE" />
+  <!-- Keywords for your paper to be indexed by -->
+  <meta name="keywords"
+    content="convex optimization, manipulation, motion planning, robotics, contact-rich manipulation, semidefinite programming, global motion planning, robotic systems, MIT, RSS 2024, convex relaxations, non-prehensile, planar pushing" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Academic Project Page</title>
+  <title>
+    Towards Tight Convex Relaxations for Contact-Rich Manipulation
+  </title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet" />
 
@@ -221,7 +227,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column is-flex is-justify-content-center">
-            <video poster="" autoplay muted loop controls style="width: 100%; max-width: 750px">
+            <video poster="" autoplay muted loop controls style="width: 100%; max-width: 900px">
               <source src="static/videos/hardware_demos.mp4" type="video/mp4" />
             </video>
           </div>
