--- a/index.html
+++ b/index.html
@@ -281,7 +281,15 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>
+          @inproceedings{graesdal2024convexrelaxations,
+          title={Towards Tight Convex Relaxations for Contact-Rich Manipulation},
+          author = {Bernhard Paus Graesdal and Shao Yuan Chew Chia and Tobia Marcucci and Savva Morozov and Alexandre
+          Amice and Pablo A. Parrilo and Russ Tedrake},
+          booktitle={Proceedings of Robotics: Science and Systems (RSS)},
+          year={2024}
+          }
+        </code></pre>
     </div>
   </section>
   <!--End BibTex citation -->
