--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
   <!-- Image carousel -->
   <section class="hero is-small">
     <div class="hero-body">
+      <h1 class="title has-text-centered">Hardware demonstrations</h1>
       <div class="container">
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item">
@@ -265,7 +266,7 @@
     <div class="hero-body">
       <div class="container">
         <!-- Paper video. -->
-        <h2 class="title is-3">Video Presentation</h2>
+        <h1 class="title has-text-centered">Video presentation</h1>
         <div class="columns is-centered has-text-centered">
           <div class="column is-four-fifths">
             <div class="publication-video">
