Add Shao website

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                   ><sup>1</sup>,
                 </span>
                 <span class="author-block">
-                  Shao Yuan Chew Chia<sup>2</sup>,
+                  <a href="https://shaoyuan.cc" target="_blank">
+                    Shao Yuan Chew Chia</a
+                  ><sup>2</sup>,
                 </span>
                 <span class="author-block">
                   <a href="https://tobiamarcucci.github.io/" target="_blank"
