Add Savva LinkedIn

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
               <span class="author-block">
                 <a href="https://tobiamarcucci.github.io/" target="_blank">Tobia Marcucci</a><sup>1</sup>,
               </span>
-              <span class="author-block"> Savva Morozov<sup>1</sup>, </span>
+              <span class="author-block"><a href="https://www.linkedin.com/in/savva-m/" target="_blank">Savva
+                  Morozov</a><sup>1</sup>,
+              </span>
               <span class="author-block">
                 <a href="https://alexandreamice.github.io/" target="_blank">Alexandre Amice</a><sup>1</sup>,
               </span>
