--- a/index.html
+++ b/index.html
@@ -264,26 +264,6 @@
   </section>
   <!-- End centered video section -->
 
-  <!-- Youtube video -->
-  <section class="hero is-small is-light">
-    <div class="hero-body">
-      <div class="container">
-        <!-- Paper video. -->
-        <h1 class="title has-text-centered">Video presentation</h1>
-        <div class="columns is-centered has-text-centered">
-          <div class="column is-four-fifths">
-            <div class="publication-video">
-              <!-- Youtube embed code here -->
-              <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media"
-                allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End youtube video -->
-
   <!-- Paper poster -->
   <!--
   <section class="hero is-small is-light">
@@ -374,6 +354,26 @@
       </div>
     </div>
   </section>
+
+  <!-- Youtube video -->
+  <section class="hero is-small is-light">
+    <div class="hero-body">
+      <div class="container">
+        <!-- Paper video. -->
+        <h1 class="title has-text-centered">Video presentation</h1>
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-four-fifths">
+            <div class="publication-video">
+              <video poster="" controls style="width: 100%; max-width: 900px">
+                <source src="static/videos/project_presentation.mp4" type="video/mp4" />
+              </video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End youtube video -->
 
   <!--BibTex citation -->
   <section class="section is-small is-light" id="BibTeX">
