--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
   <!-- Meta tags for social media banners, these should be filled in appropriately as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
   <meta name="description"
-    content="Towards Tight Convex Relaxations for Contact-Rich Manipulation - A method for global motion planning of robotic systems interacting through contacts using convex optimization." />
-  <meta property="og:title" content="Towards Tight Convex Relaxations for Contact-Rich Manipulation" />
+    content="RSS 2024: Towards Tight Convex Relaxations for Contact-Rich Manipulation - A method for global motion planning for contact-rich manipulation using convex optimization." />
+  <meta property="og:title" content="RSS 2024: Towards Tight Convex Relaxations for Contact-Rich Manipulation" />
   <meta property="og:description"
-    content="Discover a method for global motion planning of robotic systems interacting through contacts using tools from convex optimization." />
-  <meta property="og:url" content="https://github.com/bernhardpg/rss24-towards-tight-convex-relaxations" />
+    content="A method for global motion planning for contact-rich manipulation using convex optimization." />
+  <meta property="og:url" content="https://bernhardgraesdal.com/rss24-towards-tight-convex-relaxations/" />
   <!-- Path to banner image, should be in the path listed below. Optimal dimensions are 1200x630 -->
   <meta property="og:image" content="static/images/your_banner_image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="RSS 2024: Towards Tight Convex Relaxations for Contact-Rich Manipulation" />
 
-  <meta name="twitter:title" content="Towards Tight Convex Relaxations for Contact-Rich Manipulation" />
+  <meta name="twitter:title" content="RSS 2024: Towards Tight Convex Relaxations for Contact-Rich Manipulation" />
   <meta name="twitter:description"
-    content="Discover a method for global motion planning of robotic systems interacting through contacts using tools from convex optimization." />
+    content="A method for global motion planning for contact-rich manipulation using convex optimization." />
   <!-- Path to banner image, should be in the path listed below. Optimal dimensions are 1200x600 -->
   <meta name="twitter:image" content="static/images/your_twitter_banner_image.png" />
   <meta name="twitter:card" content="summary_large_image" />
