--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     content="A method for global motion planning for contact-rich manipulation using convex optimization." />
   <meta property="og:url" content="https://bernhardgraesdal.com/rss24-towards-tight-convex-relaxations/" />
   <!-- Path to banner image, should be in the path listed below. Optimal dimensions are 1200x630 -->
-  <meta property="og:image" content="static/images/your_banner_image.png" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <meta property="og:image" content="static/images/hardware_1.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="RSS 2024: Towards Tight Convex Relaxations for Contact-Rich Manipulation" />
 
@@ -22,7 +20,7 @@
   <meta name="twitter:description"
     content="A method for global motion planning for contact-rich manipulation using convex optimization." />
   <!-- Path to banner image, should be in the path listed below. Optimal dimensions are 1200x600 -->
-  <meta name="twitter:image" content="static/images/your_twitter_banner_image.png" />
+  <meta name="twitter:image" content="static/images/hardware_1.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
   <!-- Keywords for your paper to be indexed by -->
   <meta name="keywords"
