--- a/index.html
+++ b/index.html
@@ -264,20 +264,6 @@
   </section>
   <!-- End centered video section -->
 
-  <!-- Paper poster -->
-  <!--
-  <section class="hero is-small is-light">
-    <div class="hero-body">
-      <div class="container">
-        <h2 class="title">Poster</h2>
-
-        <iframe src="static/pdfs/sample.pdf" width="100%" height="550">
-        </iframe>
-      </div>
-    </div>
-  </section>
-  -->
-  <!--End paper poster -->
   <!-- Comparison with a Baseline -->
   <section class="section stats-section">
     <div class="container is-max-desktop">
@@ -375,17 +361,31 @@
   </section>
   <!-- End youtube video -->
 
+  <!-- Paper poster -->
+  <section class="hero is-small is-light">
+    <div class="hero-body">
+      <div class="container">
+        <h2 class="title">Poster</h2>
+
+        <iframe src="static/pdfs/rss24_poster.pdf" width="100%" height="1000">
+        </iframe>
+      </div>
+    </div>
+  </section>
+  <!--End paper poster -->
+
   <!--BibTex citation -->
   <section class="section is-small is-light" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <!-- prettier-ignore-start -->
       <pre><code>@inproceedings{graesdal2024convexrelaxations,
-  title={Towards Tight Convex Relaxations for Contact-Rich Manipulation},
-  author={Bernhard Paus Graesdal and Shao Yuan Chew Chia and Tobia Marcucci and Savva Morozov and Alexandre Amice and Pablo A. Parrilo and Russ Tedrake},
-  booktitle={Proceedings of Robotics: Science and Systems (RSS)},
-  year={2024}
-}</code></pre>
+          title={Towards Tight Convex Relaxations for Contact-Rich Manipulation},
+          author={Bernhard Paus Graesdal and Shao Yuan Chew Chia and Tobia Marcucci and Savva Morozov and Alexandre
+          Amice and Pablo A. Parrilo and Russ Tedrake},
+          booktitle={Proceedings of Robotics: Science and Systems (RSS)},
+          year={2024}
+          }</code></pre>
       <!-- prettier-ignore-end-->
     </div>
   </section>
